src/index.css
@import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,200;8..144,300;8..144,400&display=swap");
* {
  margin: 0;
  padding: 0;
  font-family: "Roboto Flex", Courier, monospace;
}

:root {
  --first-color: #f1f2f6;
  --second-color: black;
}

.dark-mode {
  --first-color: #2f3542;
  --second-color: white;
}

p,
h3,
span {
  color: var(--second-color);
}

body {
  /* background: #f1f2f6; */
  background: var(--first-color);
  color: var(--second-color);
}

nav {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  align-items: center;
  background: #fff;
  padding: 40px 80px;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
}
i {
  padding-right: 10px;
}

.searchBar {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  align-items: center;
  /* background-color: aqua; */
  margin-top: 20px;
  padding: 30px 60px;
}

.search {
  background-color: #fff;
  padding: 10px;
  border-radius: 5px;
  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
}

.search input {
  /* background-color: aqua; */
  width: 16rem;
  height: 30px;
  border: 0;
}
.search input:focus {
  outline: 0;
}

/* .select {
  background-color: #fff;
  padding: 10px;
  border-radius: 5px;
  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
}

.select select {
  width: 16rem;
  height: 30px;
  border: 0;
}
.select select:focus {
  outline: 0;
} */

.selectedValue {
  display: inline-block;
  width: 8rem;
  line-height: 30px;
  background-color: #fff;
  padding: 10px;
  border-radius: 5px;
  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
  text-align: center;
  /* color: red; */
}

.dropDown {
  margin-top: 10px;
  /* display: inline-block; */
  z-index: 10;
  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
  position: absolute;
}
.dropDown ul {
  background-color: #fff;
  border-radius: 5px;
  list-style: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  /* filter: drop-shadow(
    0px 4px 8px rgba(9, 30, 66, 0.25),
    0px 0px 0px 1px rgba(9, 30, 66, 0.08)
  ); */
}

.dropDown ul li {
  width: 8rem;
  padding: 4px 10px;
  line-height: 30px;
  text-align: center;
  border-bottom: #2f3542 0.5px solid;
}
.dropDown ul li:last-child {
  border-bottom: 0;
}

.card-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  align-self: center;
  margin: 30px;
}
.card {
  position: relative;
  width: 300px;
  /* height: 400px; */
  display: flex;
  flex-direction: column;
  background-color: #fff;
  margin: 10px;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
    rgba(0, 0, 0, 0.22) 0px 10px 10px;
  margin-bottom: 30px;
  transition: 0.2s all;
  border-radius: 5px;
}

.card:hover {
  transform: scale(1.05);
  cursor: pointer;
}
.card:hover .second-image {
  display: block;
}

.country-name {
  padding: 10px 0px;
}

.card-text {
  padding-top: 10px;
  padding-left: 15px;
  padding-bottom: 10px;
  line-height: 25px;
  /* color: red; */
}

.card .first-image {
  width: 300px;
  height: 176px;
  object-fit: cover;
}

.light-text {
  font-weight: 100;
}

.second-image {
  position: absolute;
  width: 80px;
  height: 80px;
  /* object-fit: fill; */
  border-radius: 50%;
  bottom: 20px;
  right: 10px;
  margin: 5px;
  opacity: 40%;
  display: none;
}

